tests/ui/suggestions/suggest-semicolon-for-fn-in-extern-block.stderr
error: expected `;`, found `}`
  --> $DIR/suggest-semicolon-for-fn-in-extern-block.rs:6:11
   |
LL |   fn foo()
   |           ^
LL | }
   | - unexpected token
   |
help: add `;` here
   |
LL |   fn foo();
   |           +

error: aborting due to 1 previous error

