tests/ui/suggestions/suggest-semicolon-for-fn-in-extern-block.rs
//@ run-rustfix

#[allow(dead_code)]

extern "C" {
  fn foo() //~ERROR expected `;`
}

fn main() {}
